--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
   <meta name="theme-color" content="#e8ff5c" />
   <title>Ride and Swing - Surf & Golf Lessons in Taghazout, Morocco</title>
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon.png?v=2" />
   <meta name="description"
     content="Experience world-class surf and golf lessons in Taghazout, Morocco with Ride and Swing. Join Julien for expert coaching, private packages, and unforgettable adventures. Book your surf & golf holiday now!" />
   <meta name="keywords"
