--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <meta name="theme-color" content="#e8ff5c" />
   <title>Ride and Swing - Surf & Golf Lessons in Taghazout, Morocco</title>
   <link rel="icon" type="image/png" href="/favicon.png?v=2" />
+
+  <!-- Single Page Apps for GitHub Pages - Redirect handling -->
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === '/') {
+        var decoded = l.search.slice(1).split('&').map(function (s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
   <meta name="description"
     content="Experience world-class surf and golf lessons in Taghazout, Morocco with Ride and Swing. Join Julien for expert coaching, private packages, and unforgettable adventures. Book your surf & golf holiday now!" />
   <meta name="keywords"
@@ -17,11 +31,9 @@
   <meta property="og:description"
     content="Experience world-class surf and golf lessons in Taghazout, Morocco. Expert coaching and unforgettable adventures." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 </head>
 
 <body>
